# Professional-CMake-Practice

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/MyExe/: CMakeLists.txt  main.cpp
src/MyLib/: CMakeLists.txt  Utils.cpp
